moved item container styles to layout to wrap all page components

--- a/styles/components/layout.module.scss
+++ b/styles/components/layout.module.scss
@@ -12,4 +12,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  .page_container {
+    width: 90vw;
+    max-width: 35rem;
+  }
 }
