--- a/styles/components/todo-item.module.scss
+++ b/styles/components/todo-item.module.scss
@@ -1,10 +1,13 @@
 .todo_item {
+  position: relative;
   font-size: 1.5rem;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: stretch;
+
   .title,
-  button {
+  button,
+  .checkbox_container {
     padding: 1rem;
     border: none;
   }
@@ -12,10 +15,17 @@
     flex: 1;
   }
 
+  .checkbox_container {
+    border-left: 3px solid #aeaeae;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   button {
     cursor: pointer;
-    background-color: transparent;
-    font-size: 1.5rem;
+    background: none;
     border-left: 3px solid #aeaeae;
   }
 }
