updated border colors

--- a/styles/components/card.module.scss
+++ b/styles/components/card.module.scss
@@ -1,7 +1,7 @@
 .card {
   width: 100%;
-  border: 3px solid #aeaeae;
-  margin: 1rem 0;
-
-  border-radius: 5px;
+  border: 2px solid #777777;
+  margin: 1.5rem 0;
+  border-radius: 10px;
+  box-shadow: 0px 20px 20px -10px rgba(174, 174, 174, 0.75);
 }
