--- a/styles/components/todo.module.scss
+++ b/styles/components/todo.module.scss
@@ -17,6 +17,6 @@
   button {
     cursor: pointer;
     background: none;
-    border-left: 3px solid #aeaeae;
+    border-left: 3px solid #777777;
   }
 }
