--- a/styles/components/error.module.scss
+++ b/styles/components/error.module.scss
@@ -5,7 +5,7 @@
 
   .error {
     padding: 1rem;
-    border: 3px solid #aeaeae;
-    border-radius: 5px;
+    border: 2px solid #777777;
+    border-radius: 10px;
   }
 }
