--- a/styles/components/todo-item.module.scss
+++ b/styles/components/todo-item.module.scss
@@ -16,7 +16,7 @@
   }
 
   .checkbox_container {
-    border-left: 3px solid #aeaeae;
+    border-left: 3px solid #777777;
     padding: 1rem;
     display: flex;
     justify-content: center;
@@ -26,6 +26,6 @@
   button {
     cursor: pointer;
     background: none;
-    border-left: 3px solid #aeaeae;
+    border-left: 3px solid #777777;
   }
 }
